infra/config/base/grafana/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${domain}.${tld}`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - kind: Service
          name: grafana
          port: 80
